@@ -15,6 +15,10 @@ This project adheres to [[http://semver.org][Semantic Versioning]].
    Add the ivy-posframe faces: ~ivy-posframe~, ~ivy-posframe-border~,
    ~ivy-posframe-border-width~, ~ivy-posframe-style~.
 
+** ADDED Variables for hydra-posframe
+
+   Add the hydra-posframe: ~hydra-posframe-show-params~.
+
 * [[https://github.com/ryuslash/yoshi-theme/compare/v6.1.0...v6.2.0][6.2.0]] -- 2019-05-05
 :PROPERTIES:
 :CUSTOM_ID: release-6.2.0
